[package]
name = "landslide"
version = "0.1.0"
edition = "2021"
authors = ["Archis Gore <me@archisgore.com>"]
description = "An Avalanche Custom VM Implemented in Rust"
readme = "README.md"
license = "Apache 2.0"
keywords = ["blockchain", "avalanche", "avax"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
tonic-health = "0.5"
prost = "0.9"
prost-types = "0.9"
portpicker = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
hmac-sha256 = "1.1"
hex = "0.4"
zerocopy = "0.6"
log = "0.4"
log4rs = { version = "1.0" }
tempfile = "3.3"
async-stream = "0.3"
backtrace = "0.3"
time = { version = "0.3.7", features = ["formatting", "parsing"]}
tower = "0.4.11"
hyper = "0.14.16"
http = "0.2.6"
futures = "0.3.19"
jsonrpc-http-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-client-transports = { version = "18.0.0", features = ["http", "ipc"] }
byteorder = "1.4.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
grr-plugin = "0.1.7"

[build-dependencies]
tonic-build = "0.6"